# AndroidClaw

./: todo.md
.github/workflows/: build.yml
app/src/main/java/com/zeroclaw/android/data/repository/: PluginRepository.kt  RoomPluginRepository.kt
app/src/main/java/com/zeroclaw/android/navigation/: Route.kt  SettingsNavAction.kt  ZeroClawNavHost.kt
app/src/main/java/com/zeroclaw/android/service/: BackupManager.kt  ConfigTomlBuilder.kt  DaemonServiceBridge.kt  ZeroClawDaemonService.kt
app/src/main/java/com/zeroclaw/android/ui/component/: ConfirmDeleteDialog.kt  ConnectionPickerSection.kt  ErrorCard.kt  LoadingIndicator.kt  LockGateScreen.kt  MaskedText.kt  OfficialPluginBadge.kt  PinEntrySheet.kt  PinKeypad.kt  PluginSectionHeader.kt  ProviderIcon.kt  RestartRequiredBanner.kt  SettingsToggleRow.kt  SetupBottomSheet.kt  StatusDot.kt
app/src/main/java/com/zeroclaw/android/ui/component/setup/: IdentityConfigFlow.kt  MemoryConfigFlow.kt
app/src/main/java/com/zeroclaw/android/ui/i18n/: ChannelFieldLabel.kt  ChannelTypeDisplayName.kt  ProviderDisplayName.kt  ProviderMetadataText.kt
app/src/main/java/com/zeroclaw/android/ui/screen/agents/: AddAgentScreen.kt  AgentDetailScreen.kt  AgentsScreen.kt
app/src/main/java/com/zeroclaw/android/ui/screen/dashboard/: CostSummaryCard.kt  CronSummaryCard.kt  DashboardScreen.kt
app/src/main/java/com/zeroclaw/android/util/: ErrorSanitizer.kt
app/src/main/java/com/zeroclaw/android/viewmodel/: DaemonViewModel.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/com/zeroclaw/android/service/: EventBridgeTest.kt
patches/: 001-android-shell-detection.patch  002-dynamic-tool-descs.patch
zeroclaw-android/zeroclaw-ffi/: Cargo.toml
zeroclaw-android/zeroclaw-ffi/src/: auth_profiles.rs  lib.rs  runtime.rs
(+40 files in other folders)
