[package]
name = "zeroclaw-ffi"
version = "0.0.37"
edition.workspace = true
license.workspace = true
description = "UniFFI-annotated facade for ZeroClaw Android bindings"

[lib]
crate-type = ["cdylib"]
name = "zeroclaw"

[lints]
workspace = true

[dependencies]
uniffi = "0.29"
thiserror = "2.0"
# default-features = false: The FFI layer communicates via the gateway
# REST API, so no optional upstream features are needed (channel-matrix,
# channel-lark, memory-postgres, observability-otel, hardware, browser-native,
# sandbox-*, probe, rag-pdf, whatsapp-web are all excluded). The daemon
# binary enables platform-specific features independently.
#
# web-fetch-plaintext is explicitly enabled because nanohtml2text is a
# direct dependency below and is used at runtime for the web_fetch tool.
# Without this feature flag, the cfg-guarded code path bails with an error.
zeroclaw = { path = "../../zeroclaw", default-features = false, features = ["web-fetch-plaintext", "web-fetch-html2md"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "stream"] }
nanohtml2text = "0.1"
futures-util = "0.3"
anyhow = "1.0"
async-trait = "0.1"
toml = "0.8"
tracing = "0.1"
chrono = "0.4"
rhai = { version = "1.21", features = ["sync"] }
regex = "1"
urlencoding = "2.1"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "env-filter"] }
